<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/first_bg"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        style="@style/Font.Header1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/landing_title"
        android:textColor="@color/white"/>

    <TextView
        style="@style/Font.SubHeader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/landing_top"
        android:textColor="@color/grey2"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        style="@style/Font.Body1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_grey"
        android:padding="24dp"
        android:text="@string/first_welcome"
        android:gravity="center"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <TextView
        style="@style/Font.SubHeader2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="All of your progress will be saved \neach time you exit the tool"
        android:textColor="@color/grey2"/>

    <Button
        android:id="@+id/next"
        style="@style/Font.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:background="@drawable/button_bg3"
        android:text="@string/contin"/>
</LinearLayout>